[metadata]
name = vorta
author = Sam
description = spotidown is an application that allows you to download your Spotify playlists and albums.
version = attr: spotidown.__version__
url = https://github.com/borgbase/vorta
keywords =
  spotify-downloader
# List of classifiers: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 1 - Planning
  Environment :: MacOS X
  Environment :: X11 Applications :: Qt
  Operating System :: MacOS
  Operating System :: POSIX
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.11
  Topic :: Multimedia :: Sound/Audio
  Topic :: Utilities
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
project_urls =
    Bug Tracker = https://github.com/SAMAD101/spotidown/issues
    Source Code = https://github.com/SAMAD101/spotidown

[options]
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >=3.11
install_requires =
  pyqt6
tests_require =
  pytest
  pytest-qt

[options.entry_points]
gui_scripts =
  spotidown = spotidown.__main__:main

[options.packages.find]
where=src
exclude=tests

[tool:pytest]
addopts = -vs
testpaths = tests
qt_default_raising = true
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
source = spotidown
omit = tests/*
relative_files = true

[testenv]
deps =
    pytest
    pytest-qt
commands=pytest
passenv = DISPLAY
